--- a/package.json
+++ b/package.json
@@ -15,5 +15,6 @@
   "bugs": {
     "url": "https://github.com/MartinLilt/national-reality-guild/issues"
   },
-  "homepage": "https://github.com/MartinLilt/national-reality-guild#readme"
+  "homepage": "https://github.com/MartinLilt/national-reality-guild#readme",
+  "dependencies": {}
 }
